<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">xiaoYuanTong</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_personal_info">PersonalInfoActivity</string>
    <string name="studentID">学号</string>
    <string name="password">密码</string>
    <string name="textLogo">校园通</string>
    <string name="remember">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="login">登录</string>
    <string name="quit">退出</string>
    <string name="userName">真实姓名</string>
    <string name="sex">性别</string>
    <string name="sexLable">选择性别</string>
    <string name="aandm">学院及专业</string>
    <string name="academy">选择学院</string>
    <string name="major">选择专业</string>
    <string name="grade">年级</string>
    <string name="gradeLable">选择年级</string>
    <string name="Email">邮箱</string>
    <string name="phoneNumber">电话</string>
    <string name="homeTown">家乡</string>
    <string name="QQ">QQ</string>
    <string name="graduatePlan">毕业计划</string>
    <string name="graduatePlanLable">选择毕业计划</string>
    <string name="submit">提交</string>
    <string name="register">注册</string>
    <string name="reset">重置</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="main_main">首页</string>
    <string name="main_friends">好友</string>
    <string name="main_news">动态</string>
    <string name="main_topic">话题</string>
    <string name="main_group">同道人</string>
    <string name="main_search">搜索</string>
    <string name="loading">正在载入</string>
    <string name="friends_news">好友消息</string>
    <string name="personnal_news">个人消息</string>
    <string name="search_friends">搜索好友</string>
    <string name="search_topic">搜索话题</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_topic">TopicActivity</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="readnews">阅读消息</string>
    <string name="refresh">刷新</string>
    <string name="collect">收藏</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="messages">留言</string>
    <string name="title_activity_down_load">DownLoadActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_up_down_tab">UpDownTabActivity</string>
    <string name="oneClass">第一大类</string>
    <string name="twoClass">第二大类</string>
    <string name="threeClass">第三大类</string>
    <string name="fourClass">第四大类</string>
    <string name="skan">浏览文件</string>
    <string name="title_activity_lost_and_found_tab">LostAndFoundTabActivity</string>
    <string name="myLandF">我的失物招领</string>
    <string name="allLandF">失物招领信息</string>
    <string name="writeLandF">写失物招领信息</string>
    <string name="title_activity_for_found">ForFoundActivity</string>
    <string name="title_activity_for_help">ForHelpActivity</string>
    <string name="title_activity_my_land_f">MyLAndFActivity</string>
    <string name="title_activity_all_land_f">AllLandFActivity</string>
    <string name="title_activity_write_land_f">WriteLAndFActivity</string>
    <string name="LandFTip">标签</string>
    <string name="ThingsType">类别</string>
    <string name="Describe">描述</string>
    <string name="Phone">手机</string>
    <string name="title_activity_write_news">WriteNewsActivity</string>
    <string name="hello_world">Hello world!</string>
    
</resources>
