<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
    
        <TableLayout
            android:id="@+id/table1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dip">
            <TableRow
                android:id="@+id/trTable1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
				<!--姓名-->
                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/userName"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
           
            <TableRow
                android:id="@+id/trTable2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <!--性别-->
                <TextView
                    android:id="@+id/tvSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/sex"
                    android:textColor="#000000" />
                <Spinner
                    android:id="@+id/sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/sex"
                    android:prompt="@string/sexLable" />
            </TableRow>
            
            <TableRow
                android:id="@+id/trTable3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
				<!--学院及专业-->
                <TextView
                    android:id="@+id/tvAandmr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/aandm"
                    android:textColor="#000000" />
                <LinearLayout 
   					 android:layout_width="match_parent"
    				 android:layout_height="wrap_content"
    				 android:orientation="horizontal"
    				 android:padding="8dp" >

   			    	<Spinner
   			        	android:id="@+id/academy"
   			        	android:layout_width="80dp"
   			        	android:layout_height="wrap_content"
   			        	android:prompt="@string/academy" />

    				<Spinner
    			    	android:id="@+id/major"
    			    	android:layout_width="112dp"
    			    	android:layout_height="wrap_content"
    			    	android:prompt="@string/major" />

			   </LinearLayout>
            </TableRow>
            
            <TableRow
                android:id="@+id/trTable4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
				<!--年级-->
                <TextView
                    android:id="@+id/tvGrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/grade"
                    android:textColor="#000000" />

                <Spinner
                    android:id="@+id/grade"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/grade"
                    android:prompt="@string/gradeLable" />

            </TableRow>
            
            <TableRow
                android:id="@+id/trTable5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
				<!--邮箱-->
                 <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/Email"
                    android:textColor="#000000" />

                 <EditText
                     android:id="@+id/etEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textEmailAddress" />
				 <requestFocus />
            </TableRow>
            
            <TableRow
                android:id="@+id/trTable6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
				<!--电话-->
                <TextView
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/phoneNumber"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />
                <requestFocus />
            </TableRow>
            
            <TableRow
                android:id="@+id/trTable7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
				<!--家乡-->
                <TextView
                    android:id="@+id/tvHomeTown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/homeTown"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/etHomeTown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
            
            <TableRow
                android:id="@+id/trTable8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
				<!--QQ-->
                <TextView
                    android:id="@+id/tvQQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/QQ"
                    android:textColor="#000000" />
                <EditText
                    android:id="@+id/etQQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <requestFocus />
            </TableRow>
            
            <TableRow
                android:id="@+id/trTable9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
				<!--毕业计划-->
                <TextView
                    android:id="@+id/tvGraduatePlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/graduatePlan"
                    android:textColor="#000000" />

                <Spinner
                    android:id="@+id/graduatePlan"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/graduatePlan"
                    android:prompt="@string/graduatePlanLable" />

            </TableRow>
            
        </TableLayout>
        
        <TableLayout
            android:id="@+id/table2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dip">   
            <TableRow
                android:id="@+id/trTable10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
			<!--重置按钮-->
            <Button
        		android:id="@+id/reset"
        		android:layout_width="180dip"
        		android:layout_height="wrap_content"
       			android:layout_marginLeft="0dip"
        		android:text="@string/reset" /> 
        	<!--提交按钮-->
            <Button
        		android:id="@+id/register"
        		android:layout_width="180dip"
        		android:layout_height="wrap_content"
       			android:layout_marginLeft="0dip"
        		android:text="@string/register" />  
            </TableRow>
        </TableLayout>
</LinearLayout>

