<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >
    <TableLayout
        android:id="@+id/table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dip" >   
    	<TableRow
            android:id="@+id/trTable1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			<!--第一大类-->
            <TextView
                 android:id="@+id/tvOneClass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dip"
                 android:text="@string/oneClass"
                 android:textColor="#000000" />
			<Spinner
   				android:id="@+id/oneClass"
   				android:layout_width="wrap_content"
   				android:layout_height="wrap_content"
   				android:entries="@array/oneClass"
   				android:prompt="@string/oneClass" />
		 </TableRow>
         <TableRow
            android:id="@+id/trTable2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			<!--第二大类-->
             <TextView
                 android:id="@+id/tvTwoClass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dip"
                 android:text="@string/twoClass"
                 android:textColor="#000000" />
			<Spinner
   				android:id="@+id/twoClass"
   				android:layout_width="wrap_content"
   				android:layout_height="wrap_content"
   				android:entries="@array/twoClass3"
   				android:prompt="@string/twoClass" />
		 </TableRow>
		 <TableRow
            android:id="@+id/trTable3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			<!--第三大类-->
             <TextView
                 android:id="@+id/tvThreeClass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dip"
                 android:text="@string/threeClass"
                 android:textColor="#000000" />
			<Spinner
   				android:id="@+id/threeClass"
   				android:layout_width="wrap_content"
   				android:layout_height="wrap_content"
   				android:entries="@array/threeClass"
   				android:prompt="@string/threeClass" />
		 </TableRow>
		 <TableRow
            android:id="@+id/trTable4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			<!--第四大类-->
             <TextView
                 android:id="@+id/tvfourClass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dip"
                 android:text="@string/fourClass"
                 android:textColor="#000000" />
			<Spinner
   				android:id="@+id/fourClass"
   				android:layout_width="wrap_content"
   				android:layout_height="wrap_content"
   				android:entries="@array/fourClass"
   				android:prompt="@string/fourClass" />
		 </TableRow>
		 <TableRow
            android:id="@+id/trTable5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			<!--上传浏览框-->
			<Button
		    		android:id="@+id/btSkan"
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:layout_alignParentLeft="true"
		    		android:layout_centerVertical="true"
		    		android:text="@string/skan"  />
			<EditText
                    android:id="@+id/etUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
		 </TableRow>
		 <TableRow
            android:id="@+id/trTable5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			<!--提交-->
			<Button
		    		android:id="@+id/btSubmit"
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:layout_alignParentLeft="true"
		    		android:layout_centerVertical="true"
		    		android:text="@string/submit"  />
		 </TableRow>
    </TableLayout>
</LinearLayout>

